[package]
name = "delouse"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["Paul Tagliamonte <paul@zoo.dev>"]
repository = "https://github.com/kittycad/delouse"
description = "delouse will expose opinionated debugging stubs most useful for tokio based async programs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4", features = ["cargo"] }
dropshot = { version = "0.15" }
elf = "0.7"
libc = "0.2"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
